syntax = "proto3";
package stayking.lendingpool.v1;

option go_package = "github.com/soohoio/stayking/v2/x/lendingpool/types";
option (gogoproto.equal_all) = true;

import "gogoproto/gogo.proto";
import "google/protobuf/any.proto";
import "cosmos/base/v1beta1/coin.proto";
import "cosmos_proto/cosmos.proto";

// Pool is the lending pool.
message Pool {
  option (gogoproto.goproto_getters) = false;

  uint64 id = 1 [ (gogoproto.moretags) = "yaml:\"id\"" ];
  repeated cosmos.base.v1beta1.Coin coins = 2 [
    (gogoproto.nullable) = false,
    (gogoproto.castrepeated) = "github.com/cosmos/cosmos-sdk/types.Coins",
    (gogoproto.moretags) = "yaml:\"coins\""
  ];
  string redemption_rate = 3 [
    (cosmos_proto.scalar) = "cosmos.Dec",
    (gogoproto.customtype) = "github.com/cosmos/cosmos-sdk/types.Dec",
    (gogoproto.nullable) = false
  ];
  repeated cosmos.base.v1beta1.Coin total_coins = 4 [
    (gogoproto.nullable) = false,
    (gogoproto.castrepeated) = "github.com/cosmos/cosmos-sdk/types.Coins",
    (gogoproto.moretags) = "yaml:\"total_coins\""
  ];
  google.protobuf.Any interest_model = 5
      [ (cosmos_proto.accepts_interface) = "InterestModelI" ];
  string denom = 6;
}

// Params defines the set of params for the lending pool module.
message Params {
  option (gogoproto.goproto_stringer) = false;

  // protocol tax rate to take from the lending pool depositors
  string protocol_tax_rate = 1 [
    (cosmos_proto.scalar) = "cosmos.Dec",
    (gogoproto.customtype) = "github.com/cosmos/cosmos-sdk/types.Dec",
    (gogoproto.nullable) = false
  ];
  // expected blocks per year
  uint64 blocks_per_year = 6;
}

// Borrow defines a borrow

// Loan defines a loan record
message Loan {
  uint64 id = 1;
  string denom = 2;
  string borrower = 3;
  string client_module = 4;
  repeated cosmos.base.v1beta1.DecCoin init_mark_price = 5 [
    (gogoproto.castrepeated) = "github.com/cosmos/cosmos-sdk/types.DecCoins",
    (gogoproto.nullable) = false
  ];
  cosmos.base.v1beta1.DecCoin total_asset_value = 6 [
    (cosmos_proto.scalar) = "cosmos.Dec",
    (gogoproto.customtype) = "github.com/cosmos/cosmos-sdk/types.Dec",
    (gogoproto.nullable) = false
  ];
  cosmos.base.v1beta1.DecCoin borrowed_value = 7 [
    (cosmos_proto.scalar) = "cosmos.Dec",
    (gogoproto.customtype) = "github.com/cosmos/cosmos-sdk/types.Dec",
    (gogoproto.nullable) = false
  ];
}
